@@ -63,7 +63,7 @@ from khmer.kfile import (check_input_files, check_space,
 from khmer.khmer_logger import (configure_logging, log_info, log_error,
                                 log_warn)
 
-
+DEFAULT_NORMALIZE_LIMIT = 20
 DEFAULT_CUTOFF = 2
 
 
@@ -88,6 +88,14 @@ def get_parser():
 
     parser.add_argument('--cutoff', '-C', default=DEFAULT_CUTOFF, type=int,
                         help="Trim at k-mers below this abundance.")
+    parser.add_argument('--variable-coverage', '-V', action='store_true',
+                        dest='variable_coverage', default=False,
+                        help='Only trim low-abundance k-mers from sequences '
+                        'that have high coverage.')
+    parser.add_argument('--normalize-to', '-Z', type=int, dest='normalize_to',
+                        help='Base the variable-coverage cutoff on this median'
+                        ' k-mer abundance.',
+                        default=DEFAULT_NORMALIZE_LIMIT)
     parser.add_argument('--savegraph', metavar="filename", default='',
                         help="If present, the name of the file to save the "
                         "k-mer countgraph to")
@@ -151,6 +159,11 @@ def main():
         name = record.name
         seq = record.sequence
         seqN = seq.replace('N', 'A')
+
+        if args.variable_coverage:  # only trim when sequence has high enough C
+            med, _, _ = graph.get_median_count(seqN)
+            if med < args.normalize_to:
+                return name, seq
 
         _, trim_at = graph.trim_on_abundance(seqN, args.cutoff)
 
